Migrate vuln analysis to dex workflow (#1752)
* Migrate vuln analysis to dex workflow

Also ports the following from v4:

* https://github.com/DependencyTrack/dependency-track/pull/5280
* https://github.com/DependencyTrack/dependency-track/pull/5418
* https://github.com/DependencyTrack/dependency-track/pull/5420

Signed-off-by: nscuro <nscuro@protonmail.com>

* Refactor vulnerability policy evaluation for batch processing

Signed-off-by: nscuro <nscuro@protonmail.com>

* Emit PROJECT_AUDIT_CHANGE notification during finding reconciliation

* Refactors query for PROJECT_AUDIT_CHANGE notification subject to use batching.
* Extends analysis reconciler to track whether the analysis state or the suppression changed.

Signed-off-by: nscuro <nscuro@protonmail.com>

* Handle un-application of stale vuln policy analyses

Closes a gap with the previous implementation where analyses that were previously applied by a vulnerability policy were un-applied if no policy matches the corresponding finding anymore.

Signed-off-by: nscuro <nscuro@protonmail.com>

* Reduce contention during batch vuln synchronization

INSERT ... ON CONFLICT still acquires row locks even when the respective records are not being modified.

Vulnerabilities being unchanged, or unable to be updated by the analyzer that reported them, is a very common scenario. This change adds a small optimization for avoiding vulns being scheduled for upserting in those cases.

Note that contention was not strictly an issue during testing, but it *could* become a problem as concurrency is cranked up.

Signed-off-by: nscuro <nscuro@protonmail.com>

* Simplify query for existing finding attributions

The joins with `COMPONENT` and `COMPONENTS_VULNERABILITIES` were unnecessary since `FINDINGATTRIBUTION` already holds all required information.

Signed-off-by: nscuro <nscuro@protonmail.com>

* Fix matching criteria query of internal analyzer

* Fixes erroneous duble index increment that caused fewer queries being built than exp