@@ -36,6 +36,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.security.SecurityRequirements;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.inject.Inject;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.HeaderParam;
 import jakarta.ws.rs.POST;
@@ -46,10 +47,10 @@ import jakarta.ws.rs.QueryParam;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import org.dependencytrack.auth.Permissions;
+import org.dependencytrack.dex.engine.api.DexEngine;
+import org.dependencytrack.dex.engine.api.request.CreateWorkflowRunRequest;
 import org.dependencytrack.event.PortfolioRepositoryMetaAnalysisEvent;
 import org.dependencytrack.event.PortfolioVulnerabilityAnalysisEvent;
-import org.dependencytrack.event.ProjectRepositoryMetaAnalysisEvent;
-import org.dependencytrack.event.ProjectVulnerabilityAnalysisEvent;
 import org.dependencytrack.integrations.FindingPackagingFormat;
 import org.dependencytrack.model.Finding;
 import org.dependencytrack.model.GroupedFinding;
@@ -62,16 +63,17 @@ import org.dependencytrack.persistence.QueryManager;
 import org.dependencytrack.persistence.RepositoryQueryManager;
 import org.dependencytrack.persistence.jdbi.FindingDao;
 import org.dependencytrack.persistence.jdbi.RepositoryMetaDao;
+import org.dependencytrack.proto.internal.workflow.v1.VulnAnalysisWorkflowArg;
 import org.dependencytrack.resources.AbstractApiResource;
 import org.dependencytrack.resources.v1.openapi.PaginatedApi;
 import org.dependencytrack.resources.v1.problems.ProblemDetails;
 import org.dependencytrack.resources.v1.vo.BomUploadResponse;
 import org.dependencytrack.util.PurlUtil;
+import org.dependencytrack.vulnanalysis.VulnAnalysisWorkflow;
 
 import java.io.IOException;
 import java.io.StringWriter;
 import java.io.Writer;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -79,7 +81,11 @@ import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import static org.dependencytrack.dex.DexWorkflowLabels.WF_LABEL_PROJECT_UUID;
+import static org.dependencytrack.dex.DexWorkflowLabels.WF_LABEL_TRIGGERED_BY;
+import static org.dependencytrack.persistence.jdbi.JdbiFactory.useJdbiHandle;
 import static org.dependencytrack.persistence.jdbi.JdbiFactory.withJdbiHandle;
+import static org.dependencytrack.proto.internal.workflow.v1.VulnAnalysisTrigger.VULN_ANALYSIS_TRIGGER_MANUAL;
 
 /**
  * JAX-RS resources for processing findings.
@@ -97,6 +103,13 @@ public class FindingResource extends AbstractApiResource {
 
     private static final Logger LOGGER = Logger.getLogger(FindingResource.class);
     public static final String MEDIA_TYPE_SARIF_JSON = "application/sarif+json";
+
+    private final DexEngine dexEngine;
+
+    @Inject
+    FindingResource(DexEngine dexEngine) {
+        this.dexEngine = dexEngine;
+    }
 
     @GET
     @Path("/project/{uuid}")
@@ -138,7 +151,7 @@ public class FindingResource extends AbstractApiResource {
             if (project != null) {
                 requireAccess(qm, project);
                 List<FindingDao.FindingRow> findingRows = withJdbiHandle(getAlpineRequest(), handle ->
-                        handle.attach(FindingDao.class).getFindingsByProject(project.getId(), suppressed, hasAnalysis));
+                        handle.attach(FindingDao.class).getFindingsByProject(project.getId(), /* includeInactive */ false, suppressed, hasAnalysis));
                 final long totalCount = findingRows.isEmpty() ? 0 : findingRows.getFirst().totalCount();
                 List<Finding> findings = findingRows.stream().map(Finding::new).toList();
                 findings = mapComponentLatestVersion(findings);
@@ -248,24 +261,26 @@ public class FindingResource extends AbstractApiResource {
     public Response analyzeProject(
             @Parameter(description = "The UUID of the project to analyze", schema = @Schema(type = "string", format = "uuid"), required = true)
             @PathParam("uuid") @ValidUuid String uuid) {
-        try (QueryManager qm = new QueryManager()) {
-            return qm.callInTransaction(() -> {
-                final Project project = qm.getObjectByUuid(Project.class, uuid);
-                if (project != null) {
-                    requireAccess(qm, project);
-                    LOGGER.info("Analysis of project " + project.getUuid() + " requested by " + super.getPrincipal().getName());
-                    final ProjectVulnerabilityAnalysisEvent vae = new ProjectVulnerabilityAnalysisEvent(project.getUuid());
-                    qm.createReanalyzeSteps(vae.getChainIdentifier());
-                    Event.dispatch(vae);
-                    final ProjectRepositoryMetaAnalysisEvent projectRepositoryMetaAnalysisEvent = new ProjectRepositoryMetaAnalysisEvent(project.getUuid());
-                    Event.dispatch(projectRepositoryMetaAnalysisEvent);
+        useJdbiHandle(handle -> requireProjectAccess(handle, UUID.fromString(uuid)));
 
-                    return Response.ok(Collections.singletonMap("token", vae.getChainIdentifier())).build();
-                } else {
-                    return Response.status(Response.Status.NOT_FOUND).entity("The project could not be found.").build();
-                }
-            });
+        final UUID runId = dexEngine.createRun(
+                new CreateWorkflowRunRequest<>(VulnAnalysisWorkflow.class)
+                        .withWorkflowInstanceId("manual-vuln-analysis:" + uuid)
+                        .withConcurrencyKey("vuln-analysis:" + uuid)
+                        .withLabels(Map.ofEntries(
+                                Map.entry(WF_LABEL_PROJECT_UUID, uuid),
+                                Map.entry(WF_LABEL_TRIGGERED_BY, getPrincipal().getName())))
+                        .withPriority(75)
+                        .withArgument(
+                                VulnAnalysisWorkflowArg.newBuilder()
+                                        .setProjectUuid(uuid)
+                                        .setTrigger(VULN_ANALYSIS_TRIGGER_MANUAL)
+                                        .build()));
+        if (runId == null) {
+            return Response.status(Response.Status.CONFLICT).build();
         }
+
+        return Response.ok(Map.of("token", runId)).build();
     }
 
     @GET
